--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'org.jetbrains.anko:anko-common:0.9'
     testImplementation 'junit:junit:4.+'
     testImplementation 'org.mockito:mockito-inline:3.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
