--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.meetbookadmin">
-
+    <permission android:name="com.example.meetbookadmin.provider.READ_URI_DATABASE"
+        android:protectionLevel="normal"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,6 +19,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- Daftarkan provider ke dalam android manifest, tentukan author, name,
+        bisa digunakan, bisa diakses dari class lain, permission untuk read dan penuhi permissionnya -->
+        <provider
+            android:authorities="com.example.meetbookadmin.provider.provider.meetbookContentProvider"
+            android:name=".provider.meetbookContentProvider"
+            android:enabled="true"
+            android:exported="true"
+            android:readPermission="com.example.meetbookadmin.provider.READ_URI_DATABASE"
+            android:grantUriPermissions="true"/>
     </application>
 
 </manifest>
